kubernetes/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway-svc
spec:
  selector:
    app: nginx-gateway
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
